@@ -28,7 +28,7 @@ public:
     FtpSplitter(bool c2s);
     ~FtpSplitter();
 
-    PAF_Status scan(Flow*, const uint8_t* data, uint32_t len,
+    Status scan(Flow*, const uint8_t* data, uint32_t len,
         uint32_t flags, uint32_t* fp);
 
     virtual bool is_paf() { return true; };
