@@ -1,6 +1,8 @@
 117
 -- added --stdin-rules
 -- added #begin / #end comments for rules
+-- changed PAF_Status to StreamSplitter::Status
+-- removed target reader current host/app
 
 116
 -- fixed valgrind leak
